--- a/source/form.html
+++ b/source/form.html
@@ -3,19 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body class="page">
-  <header class="main-header">
-    <h1 class="visually-hidden">Странца оформления заказа</h1>
-    <a class="main-header__logo" href="#">
+  <header class="main-header container main-header--deco-line">
+    <a class="main-header__logo" href="index.html">
       <img src="img/logo/logo-mobile.svg" width="33" height="37" alt="Логотип Cat Energy">
-      <img src="img/logo/logo-text.svg" width="128" height="24" alt="" aria-hidden="true">
+      <img class="main-header__text-logo" src="img/logo/logo-text.svg" width="128" height="24" alt=""
+        aria-hidden="true" />
     </a>
+    <button class="main-header__toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__list-item">
@@ -32,7 +35,8 @@
     </nav>
   </header>
   <main class="main-form">
-    <section class="form">
+    <h1 class="visually-hidden">Страница подбора программы питания.</h1>
+    <section class="form container">
       <h2 class="form__title">Подбор программы</h2>
       <h3 class="form__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</h3>
       <div class="form__wrapper">
@@ -57,29 +61,34 @@
               <li class="form__radio-item">
                 <input class="visually-hidden control-input" name="radio" value="skinny" id="skinny" type="radio"
                   checked>
-                <label class="form__radio-label" for="skinny"><span class="control-mark radio-form"></span>похудение</label>
+                <label class="form__radio-label" for="skinny"><span
+                    class="form__control-mark radio-form"></span>похудение</label>
               </li>
               <li class="form__radio-item">
                 <input class="visually-hidden control-input" name="radio" value="mass" id="mass" type="radio">
-                <label class="form__radio-label" for="mass"><span class="control-mark radio-form"></span>Набор массы</label>
+                <label class="form__radio-label" for="mass"><span class="form__control-mark radio-form"></span>Набор
+                  массы</label>
               </li>
               <li class="form__radio-item">
                 <input class="visually-hidden control-input" name="radio" value="advise" id="advise" type="radio">
-                <label class="form__radio-label" for="advise"><span class="control-mark radio-form"></span>Не знаю (Нужен ваш совет)</label>
+                <label class="form__radio-label" for="advise"><span class="form__control-mark radio-form"></span>Не знаю
+                  (Нужен ваш совет)</label>
               </li>
             </ul>
           </fieldset>
           <!-- Контактные данные -->
           <fieldset class="form__contacts fieldset-row">
-            <legend class="form__contacts-head">Контактные данные <br>(владельца кота)</legend>
+            <legend class="form__contacts-head">Контактные данные <br class="product__mob">(владельца кота)</legend>
             <ul class="form__contacts-list">
               <li class="form__contact-item">
                 <label class="form__contact-label" for="email">E-mail:*</label>
-                <input class="form__contact-input" type="email" id="email" placeholder="кuklachev@gmail.com" required><span class="mail"></span>
+                <input class="form__contact-input" type="email" id="email" placeholder="кuklachev@gmail.com"
+                  required><span class="form__contact-mail"></span>
               </li>
               <li class="form__contact-item">
                 <label class="form__contact-label" for="tel">Телефон:*</label>
-                <input class="form__contact-input" type="tel" id="tel" placeholder="8 (960) 900-60-90" required><span class="tel"></span>
+                <input class="form__contact-input" type="tel" id="tel" placeholder="8 (960) 900-60-90" required><span
+                  class="form__contact-tel"></span>
               </li>
             </ul>
           </fieldset>
@@ -118,36 +127,37 @@
         </form>
       </div>
     </section>
+    <!-- Наш адрес -->
+    <section class="contacts contacts--background">
+      <div class="contacts__wrapper container">
+        <h3 class="contacts__title">Приглашаем <br> к сотрудничеству <br> дилеров!</h3>
+        <h2 class="visually-hidden">Наш адрес.</h2>
+        <p class="contacts__adress">
+          ул. Большая <br> Конюшенная, д. 19/8 <br> <span class="contacts__adress-indent">Санкт-Петербург</span>
+        </p>
+      </div>
+      <div class="contacts__map-wrapper">
+        <iframe class="contacts__reponsive-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858715776165!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2ses!4v1659444562271!5m2!1sru!2ses"
+          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
   </main>
-  <!-- Наш адрес -->
-  <section class="contacts">
-    <div class="contacts__wrapper contacts__wrapper--background">
-      <h3 class="contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
-      <h2 class="visually-hidden">Наш адрес.</h2>
-      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </div>
-    <div class="map-responsive">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858715776165!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2ses!4v1659444562271!5m2!1sru!2ses"
-        width="320" height="362" style="border: 0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </section>
   <!-- footer -->
   <footer class="main-footer">
-    <div class="main-footer__wrapper">
+    <div class="main-footer__wrapper container">
       <h2 class="visually-hidden">Мы в социальных сетях.</h2>
       <a class="main-footer__logo" href="#"><img class="main-footer__logo-img" src="img/logo/logo-text.svg"
           alt="Логотип Cat Energy" /></a>
       <ul class="social-list">
         <li class="social-list__item">
-          <a class="social-list__vk-btn" href="https://vk.com/htmlacademy"></a>
+          <a class="social-list__icon social-list__icon--vk" href="https://vk.com/htmlacademy"></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__youtube-btn" href="https://www.youtube.com/user/htmlacademy"></a>
+          <a class="social-list__icon social-list__icon--youtube" href="https://www.youtube.com/user/htmlacademy"></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__telegram-btn" href="https://t.me/htmlacademy"></a>
+          <a class="social-list__icon social-list__icon--telegram" href="https://t.me/htmlacademy"></a>
         </li>
       </ul>
       <a class="sponsor" href="#">HTML Academy</a>
